#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([apple2rss], [0.1], [blue119@gmail.com])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_AWK
AM_PATH_PYTHON

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
